# autoteur

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  api.ts  main.tsx  store.ts  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/rooms/: post.tsx  production.tsx  story.tsx
crates/autoteur-cli/: Cargo.toml
crates/autoteur-cli/src/: main.rs
crates/autoteur-cli/tests/: cli.rs
crates/autoteur-core/: Cargo.toml
crates/autoteur-core/src/: atomic.rs  doc.rs  error.rs  git.rs  id.rs  lib.rs  lint.rs  project.rs  prompt.rs  queue.rs  render.rs  takes_store.rs
crates/autoteur-core/src/provider/: mod.rs  replicate.rs  secrets.rs  stubs.rs
crates/autoteur-core/src/schema/: beats.rs  character.rs  common.rs  mod.rs  project.rs  scene.rs  shots.rs  takes.rs  timeline.rs  world.rs
crates/autoteur-core/src/sync/: classify.rs  delta.rs  journal.rs  mod.rs
crates/autoteur-core/templates/: AGENTS.md  autoteur.toml  beats.toml  character.toml  project.gitattributes  project.gitignore  scene.toml  shots.toml  takes.manifest.toml  timeline.toml  world.toml
crates/autoteur-core/tests/: generation.rs  lints.rs  live_sync.rs  project_lifecycle.rs  prompt_resolution.rs  round_trip.rs
crates/autoteur-core/tests/fixtures/: autoteur.toml  beats.toml  character.toml  scene.toml  shots.toml  world.toml
docs/proposals/: 0001-file-formats-and-live-sync.md
