[package]
name = "autoteur-cli"
description = "The Autoteur command line — everything the GUI can do, files and text all the way down"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "autoteur"
path = "src/main.rs"

[dependencies]
autoteur-core = { path = "../autoteur-core" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = "3"
blake3 = { workspace = true }

[lints.clippy]
unwrap_used = "warn"
